--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,7 @@ authors = ["Casper Meijn <casper@meijn.net>"]
 repository = "https://github.com/caspermeijn/soap-rs"
 license = "GPL-3.0-or-later"
 
+[lib]
+name = "soap"
+
 [dependencies]
