--- a/.github/workflows/rustdoc.yml
+++ b/.github/workflows/rustdoc.yml
@@ -28,7 +28,7 @@ jobs:
           command: doc
 
       - name: Create index
-        uses: DamianReeves/write-file-action
+        uses: DamianReeves/write-file-action@v1.0
         with:
           path: ./target/doc/index.html
           contents: |
